--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -9,6 +9,6 @@
 
     <form method="post" action="create_puppy">
       <label for="name">name</label>
-      <label for="age">age</age>
-      <label for="breed">breed</breed>
+      <label for="age">age</label>
+      <label for="breed">breed</label>
   </body>
