automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,7 +8,11 @@
     <h1>Enter puppy info:</h1>
 
     <form method="post" action="create_puppy">
-      <label for="name">name</label>
-      <label for="age">age</label>
-      <label for="breed">breed</label>
+      <label for="display_puppy">Create a puppy:</label>
+      <input type="text" name="name">
+      <input type="text" name="age">
+      <input type="text" name="breed">
+      <input type="submit" name="submit">
+    </form>
+      
   </body>
