--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -1,3 +1,12 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="utf-8" 
+  <meta charset="utf-8"
+  <title></title>
+</head>
+
+<body>
+  <h1>Puppy Information:</h1>
+  <p>Puppy Name:<%= "\n#{@puppy.name}" %></p>
+  <p>Puppy Breed:<%= "#{@puppy.breed}" %></p>
+  <p>Puppy Age: <%= "#{@puppy.age}" %></p>
+</body> 
