automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,7 +8,7 @@
     <h1>Enter puppy info:</h1>
 
     <form method="post" action="create_puppy">
-      <label for="display_puppy">Create a puppy:</label>
+      <label for="display_puppy">Create a puppy:</label><br>
       <input type="text" name="name">
       <input type="text" name="age">
       <input type="text" name="breed">
