--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -9,5 +9,5 @@
   <p>Puppy Name:<%= "\n#{@puppy.name}" %></p>
   <p>Puppy Breed:<%= "#{@puppy.breed}" %></p>
   <p>Puppy Age: <%= "#{@puppy.age}" %></p>
-</body> 
-</html
+</body>
+</html>
