automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Enter puppy info:</h1>
 
-    <form method="post" action="create_puppy">
+    <form method="post" action="/">
       <label for="display_puppy">Create a puppy:</label><br>
       <input type="text" name="name">
       <input type="text" name="age">
