--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -12,7 +12,7 @@
       <input type="text" name="name">
       <input type="text" name="age">
       <input type="text" name="breed">
-      <input type="submit" name="submit"></input>
+      <input type="submit" name="submit">
     </form>
 
   </body>
