--- a/views/index.erb
+++ b/views/index.erb
@@ -6,5 +6,5 @@
 
   <body>
     <h1> Welcome! </h1>
-    <a href="/create_puppy">"Click Here To List A Puppy"</a>
+    <a href="/new">"Click Here To List A Puppy"</a>
   </body>
