automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,10 +8,9 @@
     <h1>Enter puppy info:</h1>
 
     <form method="post" action="/">
-      <label for="display_puppy">Create a puppy:</label><br>
-      <input type="text" name="name">
-      <input type="text" name="age">
-      <input type="text" name="breed">
+      <p>Name:<input type="text" name="name"></input></p>
+      <p>Breed:<input type="text" name="breed"></input></p>
+      <p>Age:<input type="text" name="age"></input></p>
       <input type="submit" name="submit">
     </form>
 
