automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -11,7 +11,7 @@
       <p>Name:<input type="text" name="name"></input></p>
       <p>Breed:<input type="text" name="breed"></input></p>
       <p>Age:<input type="text" name="age"></input></p>
-      <input type="submit" name="submit">
+      <p><input type="submit" title="submit">
     </form>
 
   </body>
