--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -7,7 +7,7 @@
 <body>
   <h1>Puppy Information:</h1>
   <p>Puppy Name:<%= "\n#{@puppy.name}" %></p>
-  <p>Puppy Breed:<%= "#{@puppy.breed}" %></p>
-  <p>Puppy Age: <%= "#{@puppy.age}" %></p>
+  <p>Puppy Breed:<%= "\n#{@puppy.breed}" %></p>
+  <p>Puppy Age: <%= "\n#{@puppy.age}" %></p>
 </body>
 </html>
